--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -65,7 +65,7 @@
             android:backgroundTint="@color/black"
             app:borderWidth="0dp"
             app:tint="@color/white"
-            app:srcCompat="@drawable/baseline_stop_24"
+            app:srcCompat="@drawable/baseline_play_arrow_24"
             app:elevation="50dp">
 
         </com.google.android.material.floatingactionbutton.FloatingActionButton>
@@ -73,20 +73,22 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
+
+</androidx.constraintlayout.widget.ConstraintLayout>
+
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/stop_button"
-            app:fabSize="mini"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
             android:backgroundTint="@color/black"
             app:borderWidth="0dp"
-            app:tint="@color/white"
+            app:elevation="50dp"
+            app:fabSize="mini"
             app:srcCompat="@drawable/baseline_stop_24"
-            app:elevation="50dp">
+            app:tint="@color/white">
 
         </com.google.android.material.floatingactionbutton.FloatingActionButton>
-</androidx.constraintlayout.widget.ConstraintLayout>
     </com.google.android.material.card.MaterialCardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
